tests/models/struct/unnamed/string/fail/default.stderr
error: Support default condition is only string
 --> tests/models/struct/unnamed/string/fail/default.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
